syntax = "proto3";

package multiple_files_proto3;

option java_package = "multiple_files_proto3";
option java_multiple_files = true;

enum NestedEnum { FOO = 0; }

message MultipleFilesMessageA {}

message MultipleFilesMessageB {}
